tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/datetime/no-leads.stderr
TOML parse error at line 2, column 17
  |
2 | no-leads = 1987-7-05T17:45:00Z
  |                 ^
invalid date-time
